syntax = "proto3";
package DomainServices.RealEstateValuationService;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts";

import "Messages/Types.proto";

message OrderStandardValuationRequest {
    int32 RealEstateValuationId = 1;
    
    OrdersStandard Data = 2;
}
